http Allowable method 변경